tests/fixtures/invalid/bad_indentation.yaml.tftpl
# Invalid YAML - inconsistent indentation that breaks YAML structure
main:
  steps:
    - initialize:
        assign:
          - value: "test"
         extra: "bad indentation here"
